--- a/pom.xml
+++ b/pom.xml
@@ -1,52 +1,64 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
-	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.avl.ditest.example</groupId>
-	<artifactId>multiple-repository-deploy</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>com.avl.ditest.example</groupId>
+    <artifactId>multiple-repository-deploy</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
 
-	<prerequisites>
-		<maven>3.5.3</maven>
-	</prerequisites>
+    <prerequisites>
+        <maven>3.5.3</maven>
+    </prerequisites>
 
-	<organization>
-		<name>AVL DiTest</name>
-		<url>http://www.avlditest.com</url>
-	</organization>
+    <organization>
+        <name>AVL DiTest</name>
+        <url>http://www.avlditest.com</url>
+    </organization>
 
-	<licenses>
-		<license>
-			<comments>
-			Copyright (C) 2018 AVL DiTest GmbH. All rights reserved This software is the confidential
-			and proprietary information of AVL DiTest GmbH. You shall not disclose such confidential
-			information and shall use it only in accordance with the terms of the license agreement you 
-			entered into with AVL DiTest GmbH.
-			</comments>
-		</license>
-	</licenses>
+    <licenses>
+        <license>
+            <comments>
+                Copyright (C) 2018 AVL DiTest GmbH. All rights reserved This software is the confidential
+                and proprietary information of AVL DiTest GmbH. You shall not disclose such confidential
+                information and shall use it only in accordance with the terms of the license agreement you
+                entered into with AVL DiTest GmbH.
+            </comments>
+        </license>
+    </licenses>
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>1.8</maven.compiler.source>
-		<maven.compiler.target>1.8</maven.compiler.target>
-	</properties>
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+    </properties>
 
-	<dependencyManagement>
-		<dependencies>
-			<dependency>
-				<groupId>junit</groupId>
-				<artifactId>junit</artifactId>
-				<version>4.12</version>
-				<scope>test</scope>
-			</dependency>
-		</dependencies>
-	</dependencyManagement>
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>junit</groupId>
+                <artifactId>junit</artifactId>
+                <version>4.12</version>
+                <scope>test</scope>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
-	<dependencies>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-		</dependency>
-	</dependencies>
+    <dependencies>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+        </dependency>
+    </dependencies>
+
+    <build>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <groupId>org.sonarsource.scanner.maven</groupId>
+                    <artifactId>sonar-maven-plugin</artifactId>
+                    <version>3.7.0.1746</version>
+                </plugin>
+            </plugins>
+        </pluginManagement>
+    </build>
 </project>
