--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,8 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
+
+        <artifactory.url>http://jenkins:10000/artifactory</artifactory.url>
     </properties>
 
     <distributionManagement>
