--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,7 @@
         <maven.compiler.target>1.8</maven.compiler.target>
 
         <artifactory.url>http://jenkins:10000/artifactory</artifactory.url>
+        <artifactory.ext.url>https://artifactoryext.avl.com/artifactory</artifactory.ext.url>
     </properties>
 
     <distributionManagement>
@@ -62,4 +63,20 @@
             <artifactId>junit</artifactId>
         </dependency>
     </dependencies>
+
+    <profiles>
+        <profile>
+            <id>god-release-deploy</id>
+            <distributionManagement>
+                <repository>
+                    <id>central</id>
+                    <url>${artifactory.ext.url}/repo-VW/vw-ditox-releases</url>
+                </repository>
+                <snapshotRepository>
+                    <id>snapshots</id>
+                    <url>${artifactory.ext.url}/repo-VW/vw-ditox-releases</url>
+                </snapshotRepository>
+            </distributionManagement>
+        </profile>
+    </profiles>
 </project>
