--- a/pom.xml
+++ b/pom.xml
@@ -69,13 +69,9 @@
             <id>god-release-deploy</id>
             <distributionManagement>
                 <repository>
-                    <id>central</id>
+                    <id>avl-ext-artifactory</id>
                     <url>${artifactory.ext.url}/repo-VW/vw-ditox-releases</url>
                 </repository>
-                <snapshotRepository>
-                    <id>snapshots</id>
-                    <url>${artifactory.ext.url}/repo-VW/vw-ditox-releases</url>
-                </snapshotRepository>
             </distributionManagement>
         </profile>
     </profiles>
