--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.avl.ditest.example</groupId>
     <artifactId>multiple-repository-deploy</artifactId>
-    <version>0.0.6-SNAPSHOT</version>
+    <version>0.0.7-SNAPSHOT</version>
 
     <prerequisites>
         <maven>3.5.3</maven>
@@ -31,18 +31,18 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
 
-        <artifactory.url>http://jenkins:10000/artifactory</artifactory.url>
-        <artifactory.ext.url>https://artifactoryext.avl.com/artifactory</artifactory.ext.url>
+        <artifactory.ditest.url>http://jenkins:10000/artifactory</artifactory.ditest.url>
+        <artifactory.avl.url>https://artifactory.avl.com/artifactory</artifactory.avl.url>
     </properties>
 
     <distributionManagement>
         <repository>
             <id>central</id>
-            <url>${artifactory.url}/libs-release-local</url>
+            <url>${artifactory.ditest.url}/libs-release-local</url>
         </repository>
         <snapshotRepository>
             <id>snapshots</id>
-            <url>${artifactory.url}/libs-snapshot-local</url>
+            <url>${artifactory.ditest.url}/libs-snapshot-local</url>
         </snapshotRepository>
     </distributionManagement>
 
@@ -70,7 +70,7 @@
             <distributionManagement>
                 <repository>
                     <id>avl-ext-artifactory</id>
-                    <url>${artifactory.ext.url}/repo-VW/vw-ditox-releases</url>
+                    <url>${artifactory.avl.url}/repo-vw-ditox-releases</url>
                 </repository>
             </distributionManagement>
         </profile>
